--- a/src/components/Navigation/NavigationBar.module.css
+++ b/src/components/Navigation/NavigationBar.module.css
@@ -1,8 +1,9 @@
 .NavigationBar {
   height: 56px;
   width: 100%;
-  background-color: #703b09;
+  background-color: #204051;
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
