--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  display: flex;
+  display: inline-flex;
   align-items: center;
-  flex-flow: column;
+  flex-wrap: wrap;
+  flex-flow: row;
   height: 100%;
 }
