--- a/src/components/PostHolder/PostHolder.module.css
+++ b/src/components/PostHolder/PostHolder.module.css
@@ -2,9 +2,8 @@
   width: 80%;
   padding: 25px;
   min-height: 200px;
-  box-shadow: 1px 2px 3px solid #ccc;
+  box-shadow: 1px 2px 3px #ccc;
   margin-top: 20px;
-  border: 1px solid #ccc;
   border-radius: 10px;
   display: grid;
   overflow: hidden;
@@ -39,11 +38,19 @@
   width: 100%;
 }
 
-.PostAction div {
-  width: 50%;
+.PostAction button {
+  margin: 0;
+  width: 100%;
+  height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid rgb(196, 196, 196);
+  justify-content: center;
+  border: none;
   background-color: rgb(230, 230, 230);
+}
+
+.PostAction button:hover {
+  border: 1px solid rgb(241, 241, 241);
+  background-color: rgb(184, 184, 184);
 }
